--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
 		  
 		  <section id="todoList"></section>
 		  
-		  <div class="clearAll">Clear all completed</div>
+		  <button class="clearAll">Clear all completed</button>
 		</div>
 
 		<script type="module" src="./index.js"></script>
